--- a/page.html
+++ b/page.html
@@ -13,7 +13,7 @@
 				border:1px solid #ff9600;
 				text-decoration: none;
 			}
-			.page-normal a,.page-current,.page-prev {
+			.page-normal a,.page-current,.page-prev,.page-next {
 				font-size: 10px;
 				margin-left: 8px;
 				padding: 5px 7px;
@@ -31,16 +31,34 @@
 				border: 1px solid #ffe3c6;
 				color: #ffe3c6;
 			}
+			.page-normal .page-next {
+				border:1px solid #ff9600;
+				text-decoration: none;
+			}
 			.page-normal .ellipsis {
 				border: none;	
 				font-size: 10px;
 				margin-left: 8px;	
 			}
+			.page-normal i {
+				display: inline-block;
+				width: 5px;
+				height: 9px;
+				background: url(img/bg_hotsale.gif);
+			}
+			.page-prev i {
+				background-position: -67px -608px;
+				margin-right: 5px;
+			}
+			.page-next i {
+				background-position: -74px -608px;
+				margin-left: 5px;
+			}
 		</style>
 	</head>
 	<body>
 		<div class="page-normal">
-			<span class="page-prev">&lt;</span>
+			<span class="page-prev"><i></i>上一页</span>
 			<span class="page-current">1</span>
 			<a href="#">2</a>
 			<a href="#">3</a>
@@ -51,7 +69,7 @@
 			<span class="ellipsis">.....</span>
 			<a href="#">199</a>
 			<a href="#">200</a>
-			<a href="#">&gt;</a>
+			<span class="page-next">下一页<i></i><span>
 		</div>
 	</body>
 </html>
