--- a/page.html
+++ b/page.html
@@ -7,14 +7,14 @@
 			.page-normal {
 				color: #ff6500;
 				text-align: center;
-				font-size: 0px;
+				font-size: 0px; /*解决行内间距bug*/
 			}
 			.page-normal a {
 				border:1px solid #ff9600;
 				text-decoration: none;
 			}
 			.page-normal a,.page-current,.page-prev,.page-next {
-				font-size: 10px;
+				font-size: 10px; /*解决行内间距bug*/
 				margin-left: 8px;
 				padding: 5px 7px;
 			}
@@ -41,7 +41,7 @@
 				margin-left: 8px;	
 			}
 			.page-normal i {
-				display: inline-block;
+				display: inline-block; /*将行内元素转化成块状元素 即可设置高宽*/
 				width: 5px;
 				height: 9px;
 				background: url(img/bg_hotsale.gif);
