--- a/fontCSS.html
+++ b/fontCSS.html
@@ -3,21 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>FRONT CSS</title>
-	<link rel="stylesheet" href="./css/basic.css">
-	<link rel="stylesheet" href="./css/fontHtml.css">
+	<link rel="stylesheet" href="css/basic.css">
+	<link rel="stylesheet" href="css/fontHtml.css">
 </head>
 <body>
 	<ul class="layout">
-		<li><a href=""><i style="color: #efe0ce;" class="imooc-icon">&#xf048;</i></a></li>
-		<li><a href=""><i style="color: #ef7073;" class="imooc-icon">&#xf04d;</i></a></li>
-		<li><a href=""><i style="color: #78ade3;" class="imooc-icon">&#xe601;</i></a></li>
-		<li><a href=""><i style="color: #eae77f;" class="imooc-icon">&#xe605;</i></a></li>
-		<li><a href=""><i style="color: #3c3c3c;" class="imooc-icon">&#xe604;</i></a></li>
-		<li><a href=""><i style="font-size:30px;" class="imooc-icon">&#xe606;</i></a></li>
-		<li><a href=""><i style="font-size:60px;" class="imooc-icon">&#xe607;</i></a></li>
-		<li><a href=""><i style="font-size:90px;" class="imooc-icon">&#xe60a;</i></a></li>
-		<li><a href=""><i style="font-size:120px;" class="imooc-icon">&#xe60c;</i></a></li>
-		<li><a href=""><i style="font-size:148px;" class="imooc-icon">&#xe60b;</i></a></li>
+		<li><a href=""><i class="imooc-icon icon-music"></i></a></li>
+		<li><a href=""><i class="imooc-icon dianying"></i></a></li>
+		<li><a href=""><i class="imooc-icon icon-pacman"></i></a></li>
+		<li><a href=""><i class="imooc-icon icon-feed"></i></a></li>
+		<li><a href=""><i class="imooc-icon icon-file"></i></a></li>
+		<li><a href=""><i class="imooc-icon icon-paste"></i></a></li>
+		<li><a href=""><i class="imooc-icon icon-folder"></i></a></li>
+		<li><a href=""><i class="imooc-icon icon-calculate"></i></a></li>
+		<li><a href=""><i class="imooc-icon icon-calculate"></i></a></li>
+		<li><a href=""><i class="imooc-icon icon-calculate"></i></a></li>
+	</ul>
 	</ul>
 </body>
 </html>
