move html to html/

--- a/html/fontCSS.html
+++ b/html/fontCSS.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>FRONT CSS</title>
-	<link rel="stylesheet" href="css/basic.css">
-	<link rel="stylesheet" href="css/fontHtml.css">
+	<link rel="stylesheet" href="../css/basic.css">
+	<link rel="stylesheet" href="../css/fontHtml.css">
 </head>
 <body>
 	<ul class="layout">
