--- a/html/cssSprite.html
+++ b/html/cssSprite.html
@@ -5,8 +5,8 @@
 	<title>CSS Sprite</title>
 	<link rel="stylesheet" href="css/basic.css">
 	<link rel="stylesheet" href="css/sprite.css">
-	<script src="./js/jquery-2.1.3.js" type="text/javascript"></script>
-	<script src="./js/sprite.js" type="text/javascript"></script>
+	<script src="../js/jquery-2.1.3.js" type="text/javascript"></script>
+	<script src="../js/sprite.js" type="text/javascript"></script>
 </head>
 <body>
 	<ul class="sprite">
