--- a/html/imgShow.html
+++ b/html/imgShow.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<script src="./script/jquery-2.1.3.js" type="text/javascript"></script>
+		<script src="../script/jquery-2.1.3.js" type="text/javascript"></script>
 		<title>
 			动画show
 		</title>
@@ -60,29 +60,29 @@
 			<div class="v_content">
 				<div class="v_content_list">
 					<ul>
-						<li><a href="#"><img src="img/gif1.gif" alt="gif1"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
+						<li><a href="#"><img src="../img/gif1.gif" alt="gif1"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
 
-						<li><a href="#"><img src="img/gif2.gif" alt="gif2"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
+						<li><a href="#"><img src="../img/gif2.gif" alt="gif2"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
 
-						<li><a href="#"><img src="img/gif3.gif" alt="gif3"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
+						<li><a href="#"><img src="../img/gif3.gif" alt="gif3"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
 
-						<li><a href="#"><img src="img/gif4.gif" alt="gif4"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
+						<li><a href="#"><img src="../img/gif4.gif" alt="gif4"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
 
-						<li><a href="#"><img src="img/gif5.gif" alt="gif5"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
+						<li><a href="#"><img src="../img/gif5.gif" alt="gif5"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
 
-						<li><a href="#"><img src="img/gif6.gif" alt="gif6"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
+						<li><a href="#"><img src="../img/gif6.gif" alt="gif6"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
 
-						<li><a href="#"><img src="img/gif7.gif" alt="gif7"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
+						<li><a href="#"><img src="../img/gif7.gif" alt="gif7"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
 
-						<li><a href="#"><img src="img/gif8.gif" alt="gif8"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
+						<li><a href="#"><img src="../img/gif8.gif" alt="gif8"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
 
-						<li><a href="#"><img src="img/gif9.gif" alt="gif9"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
+						<li><a href="#"><img src="../img/gif9.gif" alt="gif9"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
 
-						<li><a href="#"><img src="img/gif10.gif" alt="gif10"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
+						<li><a href="#"><img src="../img/gif10.gif" alt="gif10"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
 
-						<li><a href="#"><img src="img/gif11.gif" alt="gif11"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
+						<li><a href="#"><img src="../img/gif11.gif" alt="gif11"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
 
-						<li><a href="#"><img src="img/gif12.gif" alt="gif12"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
+						<li><a href="#"><img src="../img/gif12.gif" alt="gif12"></a><h4><a href="#">海贼王</a></h4><span>播放：<em>57,666</em></span></li>
 					</ul>
 				</div>
 			</div>
